# stellarst0rm.github.io

./: .gitignore  .minify.json  404.html  Cargo.toml  README.md  TODO.md  boot_text.html  build.sh  index.html  operius.html  preprocess.sh  projects.html  shenanigans.html
.github/workflows/: build-and-deploy.yml  minify-and-deploy.yml  static.yml
concepts/: 404_page_sketch.excalidraw  clippy_notifications_sketch.excalidraw  clippy_thing_sketch.excalidraw  phone_thing_sketch.excalidraw
html/: index.html
html.old/: index.html
html.old/css/: main.css
html/.well-known/: discord
html/css/: bottom.css  loader.css  main.css  window_container.css  windows.css
html5game/: Operius.js
operius-game(:D)/: tph_browser_hdpi.js
res/: apps_data.jsonc  hack_house.txt  main.css
res/apps/404/: broken_modem.avif
res/apps/minigame/: phone.avif  phone_FULL.avif
res/img/: wallpaper.avif
res/js/: desktop_manager.js  notification_manager.js  window_manager.js  window_manager.js.bak
resources/css/: main.css
src/: data.rs  desktop.rs  lib.rs  main.rs  sdo_parser.rs  silly_data.rs  templates.rs  window.rs
src.old/data/passdle/: mod.rs
src/data/: icon.template  window.template  windows.toml
src/data/passdle/: mod.rs  passdle.html
src/desktop/: closures.rs  drag.rs
static/: minigame.html
templates/: icon.html  root.html  window.html
templates/data/: README.md  a_projects.sdo  a_terminal.sdo  b_monitor.sdo  b_terminal.sdo  c_email.sdo  email.sdo  z_essay.sdo
templates/resources/css/: icons.css  main.css  windows.css
