[package]
name = "stellarst0rm_github_io"
version = "0.4.3"

description = "My cozy website made using Rust with WASM"
repository = "https://github.com/StellarSt0rm/stellarst0rm.github.io"
license = "AGPL-3.0-only"

edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.99"

[dependencies.web-sys]
version = "0.3.76"
features = [
    "Window",
    "Document",

    "HtmlElement",
    "HtmlCollection",
    "DomRect",
    "CssStyleDeclaration",

    "MouseEvent",
    "console",

    "Crypto",
]
