[package]
name = "stellarst0rm_github_io"
version = "0.4.3"

description = "My cozy website made using Rust with Wasm"
repository = "https://github.com/StellarSt0rm/stellarst0rm.github.io"
license = "AGPL-3.0-only"

edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo = { version = "0.11.0", default-features = false, features = ["events"] }
wasm-bindgen = "0.2.99"

[dependencies.web-sys]
version = "0.3.76"
