[package]
name = "stellarst0rm_github_io"
version = "0.4.3"

description = "My cozy website made using Rust with Wasm"
repository = "https://github.com/StellarSt0rm/stellarst0rm.github.io"
license = "AGPL-3.0-only"

edition = "2024"

[dependencies]
askama = { version = "0.14.0", default-features = false, features = ["derive"] }
include_dir = "0.7.4"
